--- a/css/index.css
+++ b/css/index.css
@@ -12,11 +12,81 @@ body {
   line-height: 1.5;
   font-family: 'Roboto';
   -webkit-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
   overflow-x: hidden;
 }
-header {
+body.navbar-expanded .mobile-nav {
+  transform: translateY(0);
+}
+body.navbar-expanded #toggle-navbar {
+  justify-content: center;
+}
+body.navbar-expanded #toggle-navbar .icon-bar:nth-child(1) {
+  transform: rotate(-45deg) translateY(2px);
+}
+body.navbar-expanded #toggle-navbar .icon-bar:nth-child(2) {
   display: none;
-  position: absolute;
+}
+body.navbar-expanded #toggle-navbar .icon-bar:nth-child(3) {
+  transform: rotate(45deg) translateY(-2px);
+}
+.mobile-nav {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease;
+  transform: translateY(-100%);
+  background-color: #0e1a35;
+  z-index: 1;
+  padding: 2rem 0;
+}
+.mobile-nav .menu-list .menu-item {
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 3.75;
+  font-weight: 400;
+}
+.mobile-nav .menu-list .menu-item:hover a {
+  color: #fff;
+}
+header #toggle-navbar {
+  background-color: transparent;
+  border: none;
+  position: fixed;
+  z-index: 2;
+  top: 1rem;
+  right: 1rem;
+  height: 1.4rem;
+  width: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+header #toggle-navbar .icon-bar {
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+  background-color: #fff;
+  transition: transform 0.3s ease;
+}
+a {
+  text-decoration: none;
+  color: #576076;
+}
+a:visited {
+  text-decoration: none;
+  color: #576076;
+}
+.menu-list .menu-item {
+  font-size: 15px;
+  line-height: 3;
+  letter-spacing: 0.3px;
+  text-align: center;
+  color: #8492af;
+  transition: color 0.3s ease;
+}
+.menu-list .menu-item:hover {
+  color: #c3cee4;
 }
 .flex {
   display: flex;
@@ -167,17 +237,6 @@ footer {
   padding: 2rem 0;
   background-color: #0e1a35;
 }
-footer .menu-list .menu-item {
-  font-size: 15px;
-  line-height: 3;
-  letter-spacing: 0.3px;
-  text-align: center;
-  color: #8492af;
-  transition: color 0.3s ease;
-}
-footer .menu-list .menu-item:hover {
-  color: #c3cee4;
-}
 footer .subscribe h1 {
   margin: 2rem 0;
   font-size: 18px;
@@ -221,14 +280,6 @@ footer .contacts {
 }
 footer .contacts p {
   margin: 0;
-}
-footer .contacts a {
-  text-decoration: none;
-  color: #576076;
-}
-footer .contacts a:visited {
-  text-decoration: none;
-  color: #576076;
 }
 footer .contacts address {
   font-style: normal;
