--- a/styl/index.styl
+++ b/styl/index.styl
@@ -11,11 +11,77 @@ body
 	line-height: 1.5
 	font-family: 'Roboto'
 	-webkit-font-smoothing: antialiased
+	text-rendering: optimizelegibility
 	overflow-x: hidden
+	
+	&.navbar-expanded
+		.mobile-nav
+			transform: translateY(0)
+		#toggle-navbar
+			justify-content: center
+			.icon-bar:nth-child(1)
+				transform: rotate(-45deg) translateY(2px)
+			.icon-bar:nth-child(2)
+				display: none
+			.icon-bar:nth-child(3)
+				transform: rotate(45deg) translateY(-2px)
+
+.mobile-nav
+	position: fixed
+	width: 100%
+	height: 100%
+	transition: transform .3s ease
+	transform: translateY(-100%)
+	background-color: #0e1a35
+	z-index: 1
+	padding: 2rem 0
+	.menu-list
+		.menu-item
+			font-size: 16px
+			text-transform: uppercase
+			line-height: 3.75
+			font-weight: 400
+			&:hover
+				a
+					color: #ffffff
 
 header
-	display none
-	position: absolute
+	#toggle-navbar
+		background-color: transparent
+		border: none
+		position: fixed
+		z-index: 2
+		top: 1rem
+		right: 1rem
+		height: 1.4rem
+		width: 2rem
+		display: flex
+		flex-direction: column
+		justify-content: space-between
+		.icon-bar
+			height: 4px
+			width: 100%
+			border-radius: 2px
+			background-color: white
+			transition: transform .3s ease
+	
+a
+	text-decoration: none
+	color: #576076
+	&:visited
+		text-decoration: none
+		color: #576076
+	
+.menu-list
+	.menu-item
+		font-size: 15px
+		line-height: 3.0
+		letter-spacing: 0.3px
+		text-align: center
+		color: #8492af
+		transition: color .3s ease
+		&:hover
+			color: #c3cee4
 
 .flex
 	display flex
@@ -143,16 +209,6 @@ h2.sub-title
 footer
 	padding: 2rem 0
 	background-color: #0e1a35
-	.menu-list
-		.menu-item
-			font-size: 15px
-			line-height: 3.0
-			letter-spacing: 0.3px
-			text-align: center
-			color: #8492af
-			transition: color .3s ease
-			&:hover
-				color: #c3cee4
 	.subscribe
 		h1
 			margin: 2rem 0
@@ -191,12 +247,6 @@ footer
 		color: #576076
 		p
 			margin: 0
-		a
-			text-decoration: none
-			color: #576076
-			&:visited
-				text-decoration: none
-				color: #576076
 		address
 			font-style: normal
 			margin-bottom: 1rem
