--- a/parts/header.jade
+++ b/parts/header.jade
@@ -1,8 +1,10 @@
 header
 	.container
-		//- nav
-		//- 	.navbar-expanded
-		//- 		include menu
+		nav
+			img.logo(src="../images/svg/logo.svg" width="43" height="48")
+			.logo-text-container
+				img.logo-text(src="../images/svg/logo-text.svg" width="74" height="16")
+				.company-subname you need web
 		#toggle-navbar
 			.icon-bar
 			.icon-bar
