--- a/index.jade
+++ b/index.jade
@@ -20,28 +20,30 @@ html(lang="en")
 		section#services.flex.align-ver-center
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="../images/gif/outsource.gif" width="100" height="100")
-				h1.title.dark.service-title Development of the Project
-				h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-				button(role="button") Get more info
+				.service-description
+					h1.title.dark.service-title Development of the Project
+					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+					button(role="button") Get more info
 
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="../images/gif/outstuff.gif" width="100" height="100")
-				h1.title.dark.service-title Dedicated Development Team
-				h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-				button(role="button") Get more info
+				.service-description
+					h1.title.dark.service-title Dedicated Development Team
+					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+					button(role="button") Get more info
 
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="../images/gif/relocation.gif" width="100" height="100")
-				h1.title.dark.service-title Developer for relocation
-				h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-				button(role="button") Get more info
+				.service-description
+					h1.title.dark.service-title Developer for relocation
+					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+					button(role="button") Get more info
 
 		section#about-services.flex.align-ver-center
 			.container
-				span 
-					| If you don’t know what to choose, learn more about each of this options and its difference 
-					a(href="#") here
-					| .
+				| If you don’t know what to choose, learn more about each of this options and its difference 
+				a(href="#") here
+				| .
 		section#guarantee.flex.align-ver-center
 			.container
 				h1.title We guarantee
