--- a/parts/footer.jade
+++ b/parts/footer.jade
@@ -1,6 +1,10 @@
 footer
 	.container
-		include menu
+		.menu-container
+			include menu
+			.copyright.desktop
+				p
+					| &copy; 2017 UNeed Web All Right Reserved
 		.subscribe
 			h1 Keep up to date with us
 			.subscribe-form
@@ -15,6 +19,6 @@ footer
 				span Email:
 				a(href="mailto:info@uneedweb.com?subject=Contact UNeed Web") info@uneedweb.com
 
-		.copyright
+		.copyright.mobile
 			p
 				| &copy; 2017 UNeed Web All Right Reserved
