--- a/parts/header.jade
+++ b/parts/header.jade
@@ -1,10 +1,13 @@
 header
 	.container
 		nav
-			img.logo(src="../images/svg/logo.svg" width="43" height="48")
-			.logo-text-container
-				img.logo-text(src="../images/svg/logo-text.svg" width="74" height="16")
-				.company-subname you need web
+			.logo-container
+				img.logo(src="../images/svg/logo.svg" width="43" height="48")
+				.logo-text-container
+					img.logo-text(src="../images/svg/logo-text.svg" width="74" height="16")
+					.company-subname You Need Web
+			.menu-container
+				include menu
 		#toggle-navbar
 			.icon-bar
 			.icon-bar
