--- a/parts/header.jade
+++ b/parts/header.jade
@@ -2,9 +2,9 @@ header
 	.container
 		nav
 			.logo-container
-				img.logo(src="../images/svg/logo.svg" width="43" height="48")
+				img.logo(src="images/svg/logo.svg" width="43" height="48")
 				.logo-text-container
-					img.logo-text(src="../images/svg/logo-text.svg" width="74" height="16")
+					img.logo-text(src="images/svg/logo-text.svg" width="74" height="16")
 					.company-subname You Need Web
 			.menu-container
 				include menu
