--- a/css/index.css
+++ b/css/index.css
@@ -42,18 +42,35 @@ button {
   cursor: pointer;
   padding: 0.9rem 2.8rem;
   border-radius: 4px;
-  background-color: #f3f8ff;
+  background-color: transparent;
   border: solid 2px #8492af;
   font-size: 16px;
   letter-spacing: 0.3px;
   color: #8492af;
-  transition: background-color 0.3s ease;
+  position: relative;
+  transition: color, border-color 0.3s ease;
+  z-index: 1;
+}
+button:before {
+  position: absolute;
+  z-index: -1;
+  content: '';
+  top: 0;
+  left: 0;
+  border-radius: 2px;
+  background-color: #ff6955;
+  transition: width 0.3s ease;
+  height: 100%;
+  width: 0%;
 }
 button:hover,
 button:focus {
-  border-color: #ff6955;
-  background-color: #ff6955;
   color: #fff;
+  border-color: #ff6955;
+}
+button:hover:before,
+button:focus:before {
+  width: 100%;
 }
 h1.title {
   font-family: Roboto;
@@ -73,7 +90,7 @@ h1.title.dark {
 }
 h2.sub-title {
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5;
   text-align: center;
   color: #8492af;
@@ -83,7 +100,6 @@ h2.sub-title {
     width: 40rem;
     margin: auto;
     font-size: 18px;
-    font-weight: 300;
     line-height: 1.33;
   }
 }
@@ -145,6 +161,7 @@ body.navbar-expanded #toggle-navbar .icon-bar:nth-child(3) {
   background-color: #0e1a35;
   z-index: 1;
   padding: 2rem 0;
+  overflow-y: auto;
 }
 .mobile-nav .menu-list {
   padding-top: 2rem;
@@ -220,6 +237,7 @@ header nav .logo-text-container .company-subname {
     display: flex;
   }
   header nav .menu-container .menu-list .menu-item {
+    cursor: pointer;
     position: relative;
     padding: 0 1rem;
   }
@@ -227,15 +245,18 @@ header nav .logo-text-container .company-subname {
     font-weight: 400;
     color: #fff;
   }
-  header nav .menu-container .menu-list .menu-item.active:after,
-  header nav .menu-container .menu-list .menu-item:hover:after {
+  header nav .menu-container .menu-list .menu-item:after {
     content: '';
     position: absolute;
     height: 2px;
     left: 0;
     bottom: 6px;
-    width: 100%;
+    width: 0%;
+    transition: width 0.3s ease;
     background-image: linear-gradient(to left, #ec523e, #4444b9);
+  }
+  header nav .menu-container .menu-list .menu-item:hover:after {
+    width: 100%;
   }
 }
 @media screen and (min-width: 992px) {
@@ -361,6 +382,9 @@ footer .copyright {
   text-align: center;
   color: #5a6379;
 }
+footer .copyright.desktop {
+  display: none;
+}
 @media screen and (min-width: 768px) {
   footer .subscribe-form {
     width: 20rem;
@@ -404,6 +428,11 @@ footer .copyright {
   background-size: cover;
   background-position: 50%;
   background-repeat: no-repeat;
+}
+@media screen and (min-width: 992px) {
+  #landing {
+    padding-top: 0;
+  }
 }
 #info {
   padding: 4rem 0;
