--- a/styl/index.styl
+++ b/styl/index.styl
@@ -8,6 +8,8 @@
 	background-size: cover
 	background-position: 50%
 	background-repeat: no-repeat
+	@media screen and (min-width: $screenMedium)
+		padding-top: 0
 	
 #info
 	padding: 4rem 0
